Popravio docker-compose datoteku i datasource direktivu u konfiguraciji aplikacije. Nisam testirao jer ne mogu pokrenuti kontejner u praktikumu. Dodao sam atribute za 1:N vezu u entity klase. Dodao sam UserEntity klasu i repo interface. Moram riješiti problem s releaseDate atributom i njegovim konverzijama i spremanjem. Potrebno je implementirati REST logiku iz zahtjeva i napisati pripadne testove. Moram ugraditi jacoco dependency.

--- a/MLib/src/main/resources/application.yaml
+++ b/MLib/src/main/resources/application.yaml
@@ -17,7 +17,8 @@ spring:
       ddl-auto: update
 
   datasource:
-    url: jdbc:mariadb://localhost:3306/MLidb
+    #url: jdbc:mariadb://localhost:3306/MLidb   # they are in the same docker network
+    url: jdbc:mariadb://db:3306/MLidb
     username: root # never use root user like in this example, configure your own user in init script with limited permissions
     password: pass # never hardcode passwords, use env variables
     driver-class-name: org.mariadb.jdbc.Driver
