Napokon pokrenuo neke smislene testove. USpio inicijalizirati bazu podataka za testove i popunio sve tri tablice s testnim podacima. Došao do dijela gdje treba dodati posebne metode u repozitorij sučelje za pretraživanje s filterima (JPQL jezik). Treba ostvariti paginaciju. Stao na prvom funkcionalnom zahtjevu.

--- a/MLib/src/test/resources/application-test.yaml
+++ b/MLib/src/test/resources/application-test.yaml
@@ -8,7 +8,7 @@ spring:
       ddl-auto: update # create-drop is useful for testing, because we want to have a clean initialization every time
 
   datasource:
-    url: jdbc:h2:mem:MLidb;INIT=CREATE SCHEMA IF NOT EXISTS MLidb
+    url: jdbc:h2:mem:MLidb;INIT=CREATE SCHEMA IF NOT EXISTS m_lidb
     username: sa
     password:
     driver-class-name: org.h2.Driver
