--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 services:
   db:
     image: mariadb
-    restart: always
+    restart: always # reboot if fails
     environment:
-      MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
+      MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD} # have "MARIADB_ROOT_PASSWORD = [your password]" in ./.env file
     volumes:
-      - ./mariadb:/docker-entrypoint-initdb.d
+      - ./mariadb:/docker-entrypoint-initdb.d # init data script
       - ./MLib/data:/var/lib/mysql:Z  # setup volume for persistence when db is not running
     ports:
       - "3306:3306" # can be omited if we don't want visibility ouside docker env
-    healthcheck:
+    healthcheck:  # healthcheck.sh provided by maraidb container
       interval: 30s
       retries: 3
       test:
@@ -24,12 +24,11 @@ services:
 
   libService:
     build: ./MLib   # build from the project directory Dockerfile
-    image: dz2-libservice
+    image: dz2-libservice # explicit
     ports:
       - "8080:8080"
     environment:
-      TESTVAR: TESTVAL
+      TESTVAR: TESTVAL  # not imortant, just testing something
     depends_on:
       db:
         condition: service_healthy # start only after db is running and healthy
-    command: bash -c "sleep 3 && exec /start_command.sh"  # wait a little for any small db initialization
