Napravio sve osim uspješnog pokretanja docker compose up. Svi testovi prolaze. Kod pokretanja compose up s trebutnom skriptom javlja se error '200~dz2-main-libService-1  | java.sql.SQLSyntaxErrorException: (conn=5) Unknown database 'MLidb'~' nakon pokretanja baze i spajanja na nju. Nije mi jasno jer se nigjde osim u kontekstu testova ne spominje MLidb baza. Svugdje drugdje je m_lidb. Ne znam što se događa. Napravim normalno mvn clean install i onda docker compose up i pukne kod pokretanja lib servisa.

--- a/MLib/src/main/resources/application.yaml
+++ b/MLib/src/main/resources/application.yaml
@@ -4,21 +4,12 @@ spring:
   jpa:
     show-sql: true # Show SQL queries in the console, useful for debugging, but not recommended for production
     hibernate:
-      # Set this to none if you have your own schema.sql initialization file,
-      # and you want to use it instead of Hibernate's schema generation.
-      #
-      # The initialization file may look like this:
-      # CREATE TABLE IF NOT EXISTS coffee_ordering.coffee (
-      #   id BIGINT AUTO_INCREMENT PRIMARY KEY,
-      #   coffee_name VARCHAR(255) NOT NULL,
-      #   coffee_type ENUM('ESPRESSO','MACCHIATO','LUNGO') NOT NULL,
-      #   available BOOLEAN NOT NULL
-      #);
+
       ddl-auto: update
 
   datasource:
-    #url: jdbc:mariadb://localhost:3306/MLidb   # they are in the same docker network
-    url: jdbc:mariadb://db:3306/MLidb
+    #url: jdbc:mariadb://localhost:3306/m_lidb
+    url: jdbc:mariadb://db:3306/m_lidb
     username: root # never use root user like in this example, configure your own user in init script with limited permissions
     password: pass # never hardcode passwords, use env variables
     driver-class-name: org.mariadb.jdbc.Driver
